--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-immer": "^0.10.0"
   },
   "devDependencies": {
     "@types/node": "^20",
