--- a/package.json
+++ b/package.json
@@ -1,45 +1,17 @@
 {
-  "name": "universe-web",
-  "version": "0.1.0",
+  "name": "nuxt-app",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@headlessui/react": "^2.0.3",
-    "@phosphor-icons/react": "^2.1.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/themes": "^3.0.5",
-    "@tsparticles/engine": "^3.4.0",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.4.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.379.0",
-    "next": "14.2.3",
-    "pocketbase": "^0.21.2",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-feather": "^2.0.10",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "use-immer": "^0.10.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "nuxt": "^3.16.2",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   }
 }
