--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "1.10.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@vee-validate/zod": "^4.15.0",
     "@vueuse/core": "^13.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -22,13 +24,17 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.5",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue-sonner": "^1.3.2"
+    "vue-sonner": "^1.3.2",
+    "zod": "^3.24.3"
   },
   "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677",
   "devDependencies": {
+    "@nuxt/icon": "^1.12.0",
     "@nuxtjs/color-mode": "^3.5.2",
+    "nuxt-particles": "^0.3.0",
     "typescript": "^5.8.3"
   }
 }
