--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/image": "1.10.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/vue-table": "^8.21.3",
     "@vee-validate/zod": "^4.15.0",
     "@vueuse/core": "^13.1.0",
     "class-variance-authority": "^0.7.1",
