--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.5",
+    "vaul-vue": "^0.4.1",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
@@ -33,6 +34,7 @@
   },
   "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677",
   "devDependencies": {
+    "@iconify-json/mdi": "^1.2.3",
     "@nuxt/icon": "^1.12.0",
     "@nuxtjs/color-mode": "^3.5.2",
     "nuxt-particles": "^0.3.0",
