--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.501.0",
     "nuxt": "^3.16.2",
+    "nuxt-svgo": "4.1.2",
     "pocketbase": "0.21.2",
     "reka-ui": "^2.2.0",
     "shadcn-nuxt": "2.1.0",
